--- a/changes/29.2.1.md
+++ b/changes/29.2.1.md
@@ -1,6 +1,24 @@
 * Refine shape of `U+1CC09`, `U+1CC0A`, `U+1CC10` and `U+1CC11`.
 * Refine terminal shape of Schwa and Reversed Lower E (`U+018F`, `U+0258`..`U+025A`, `U+04D8`..`U+04D9`) under italics.
 * Add characters:
+  - ARC (`U+2312`).
+  - SEGMENT (`U+2313`).
+  - SECTOR (`U+2314`).
+  - NOT CHECK MARK (`U+237B`).
+  - BELL SYMBOL (`U+237E`).
+  - VERTICAL LINE WITH MIDDLE DOT (`U+237F`).
+  - WHITE SQUARE WITH CENTRE VERTICAL LINE (`U+2385`).
+  - MONOSTABLE SYMBOL (`U+238D`).
+  - DENTISTRY SYMBOL LIGHT VERTICAL AND TOP RIGHT (`U+23BE`) ... DENTISTRY SYMBOL LIGHT VERTICAL AND BOTTOM LEFT (`U+23CC`).
+  - EARTH GROUND (`U+23DA`).
+  - FUSE (`U+23DB`).
+  - WHITE TRAPEZIUM (`U+23E2`).
+  - STRAIGHTNESS (`U+23E4`).
+  - FLATNESS (`U+23E5`).
+  - UP ARROWHEAD IN A RECTANGLE BOX (`U+2BB9`).
+  - BALLOT BOX WITH LIGHT X (`U+2BBD`).
+  - CIRCLED X (`U+2BBE`).
+  - CIRCLED BOLD X (`U+2BBF`).
   - LEFT-FACING SNAKE HEAD WITH OPEN MOUTH (`U+1CC70`) ... DOWN-FACING SNAKE HEAD WITH CLOSED MOUTH (`U+1CC77`)  (Proposed for Unicode 16; L2/21-235).
   - UPPER LEFT QUADRANT FACE WITH OPEN EYES (`U+1CCA6`) ... BOTTOM HALF FORWARD-FACING RUNNER FRAME-4 (`U+1CDF4`)  (Proposed for Unicode 16; L2/21-235).
   - TOP HALF FLAILING ROBOT FRAME-1 (`U+1CDF6`)  (Proposed for Unicode 16; L2/21-235).
