Add semi-chancery-serifed variants to `x`.

--- a/changes/30.0.0.md
+++ b/changes/30.0.0.md
@@ -1,5 +1,8 @@
 * \[**Breaking**\] A separate variant selector, `tittle`, was added to allow users to configure the shape of the dots in `i` and `j` separately.
   - As a result, feature tags for `cv95` ... `cv99`, `VSAA` ... `VSAQ` are shifted by one place to `cv96` ... `cv99` `VSAA`, `VSAB` ... `VSAR`.
+* \[**BREAKING**\] Add `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for `x` (`cv48`). As a result, variants of `x` are reordered. Change of variant names:
+  - `x`.`semi-chancery-straight` → `x`.`semi-chancery-straight-serifless`
+  - `x`.`semi-chancery-curly` → `x`.`semi-chancery-curly-serifless`
 * Refine shape of CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
 * Fix H bar position of CYRILLIC {CAPITAL|SMALL} LETTER NJE (`U+040A`, `U+045A`).
 * Fix mapping of LEFT-FACING SNAKE HEAD WITH OPEN MOUTH (`U+1CC70`) ... DOWN-FACING SNAKE HEAD WITH CLOSED MOUTH (`U+1CC77`).
