--- a/changes/30.0.0.md
+++ b/changes/30.0.0.md
@@ -8,3 +8,4 @@
 * Fix mapping of LEFT-FACING SNAKE HEAD WITH OPEN MOUTH (`U+1CC70`) ... DOWN-FACING SNAKE HEAD WITH CLOSED MOUTH (`U+1CC77`).
 * Add characters:
   - KEYBOARD (`U+2328`).
+  - BOTTOM RIGHT CROP (`U+230C`) ... TOP LEFT CROP (`U+230F`).
