--- a/changes/30.0.0.md
+++ b/changes/30.0.0.md
@@ -4,6 +4,7 @@
   - `x`.`semi-chancery-straight` → `x`.`semi-chancery-straight-serifless`
   - `x`.`semi-chancery-curly` → `x`.`semi-chancery-curly-serifless`
 * Refine shape of CYRILLIC CAPITAL LETTER SHHA (`U+04BA`).
+* Fix leaning mark anchors for letters with top hooks (`U+0187`, `U+0188`, `U+0193`, `U+0199`, `U+01A5`, `U+01AD`, `U+0253`, `U+0257`, `U+0260`, `U+0266`, `U+0267`, `U+0284`, `U+029B`, `U+0280`, `U+1D91`, `U+1DF09`).
 * Fix H bar position of CYRILLIC {CAPITAL|SMALL} LETTER NJE (`U+040A`, `U+045A`).
 * Fix mapping of LEFT-FACING SNAKE HEAD WITH OPEN MOUTH (`U+1CC70`) ... DOWN-FACING SNAKE HEAD WITH CLOSED MOUTH (`U+1CC77`).
 * Add characters:
