--- a/changes/30.0.0.md
+++ b/changes/30.0.0.md
@@ -11,3 +11,5 @@
   - BOTTOM RIGHT CROP (`U+230C`) ... TOP LEFT CROP (`U+230F`).
   - KEYBOARD (`U+2328`).
   - COUNTERBORE (`U+2334`).
+  - LESS-THAN ABOVE SIMILAR OR EQUAL (`U+2A8D`).
+  - GREATER-THAN ABOVE SIMILAR OR EQUAL (`U+2A8E`).
