--- a/changes/30.1.0.md
+++ b/changes/30.1.0.md
@@ -1,6 +1,12 @@
 * Reduce fully-serifed variants of turned m (`U+019C`, `U+026F`, `U+0270`) and Cyrillic Italic Lower {Sha|Scha} (`U+0448`, `U+0449`) under monospace.
 * Add characters:
   - SQUAT BLACK RIGHTWARDS ARROW (`U+27A7`).
+  - CYRILLIC CAPITAL LETTER CCHE (`U+A686`).
+  - CYRILLIC SMALL LETTER CCHE (`U+A687`).
+  - CYRILLIC CAPITAL LETTER HWE (`U+A694`).
+  - CYRILLIC SMALL LETTER HWE (`U+A695`).
+  - LATIN SMALL LETTER U WITH SHORT RIGHT LEG (`U+AB4E`).
+  - LATIN SMALL LETTER U BAR WITH SHORT RIGHT LEG (`U+AB4F`).
   - LATIN SMALL LETTER DEZH DIGRAPH WITH PALATAL HOOK (`U+1DF12`).
   - LATIN SMALL LETTER TESH DIGRAPH WITH PALATAL HOOK (`U+1DF17`).
   - LEFTWARDS ARROW WITH SMALL TRIANGLE ARROWHEAD (`U+1F800`) ... DOWNWARDS ARROW WITH LARGE TRIANGLE ARROWHEAD (`U+1F80B`).
