Fix Te bar terminal of TeTse/Tche for sans oblique

--- a/changes/30.1.2.md
+++ b/changes/30.1.2.md
@@ -1,3 +1,5 @@
+* Fix Te bar terminal for Cyrillic TeTse (`U+04B4`..`U+04B5`) and Tche (`U+A693`..`U+A694`) under sans italic/oblique when `T` (`cv19`) is serifed.
+* Make presence of non-Te serifs of Cyrillic TeTse automatic.
 * Add characters:
   - DOTTED OBELOS (`U+2E13`).
   - MODIFIER LETTER DOT VERTICAL BAR (`U+A717`) ... MODIFIER LETTER DOT HORIZONTAL BAR (`U+A719`).
