Add five combining marks from Cyrillic Ext.-B

--- a/changes/30.1.2.md
+++ b/changes/30.1.2.md
@@ -2,4 +2,6 @@
 * Make presence of non-Te serifs of Cyrillic TeTse automatic.
 * Add characters:
   - DOTTED OBELOS (`U+2E13`).
+  - COMBINING CYRILLIC VZMET (`U+A66F`).
+  - COMBINING CYRILLIC KAVYKA (`U+A67C`) ... CYRILLIC PAYEROK (`U+A67F`).
   - MODIFIER LETTER DOT VERTICAL BAR (`U+A717`) ... MODIFIER LETTER DOT HORIZONTAL BAR (`U+A719`).
