--- a/changes/30.1.2.md
+++ b/changes/30.1.2.md
@@ -1,6 +1,8 @@
 * Fix Te bar terminal for Cyrillic TeTse (`U+04B4`..`U+04B5`) and Tche (`U+A693`..`U+A694`) under sans italic/oblique when `T` (`cv19`) is serifed.
 * Make presence of non-Te serifs of Cyrillic TeTse automatic.
 * Add characters:
+  - COMBINING KAVYKA ABOVE RIGHT (`U+1DF6`).
+  - COMBINING KAVYKA ABOVE LEFT (`U+1DF7`).
   - DOTTED OBELOS (`U+2E13`).
   - COMBINING CYRILLIC VZMET (`U+A66F`).
   - COMBINING CYRILLIC KAVYKA (`U+A67C`) ... CYRILLIC PAYEROK (`U+A67F`).
