--- a/changes/30.1.2.md
+++ b/changes/30.1.2.md
@@ -7,3 +7,4 @@
   - COMBINING CYRILLIC VZMET (`U+A66F`).
   - COMBINING CYRILLIC KAVYKA (`U+A67C`) ... CYRILLIC PAYEROK (`U+A67F`).
   - MODIFIER LETTER DOT VERTICAL BAR (`U+A717`) ... MODIFIER LETTER DOT HORIZONTAL BAR (`U+A719`).
+* Fix mark placement of Sideways U with Diaeresis (`U+1D1E`) when a CV/SS is applied to it (#2353).
