--- a/changes/30.1.2.md
+++ b/changes/30.1.2.md
@@ -4,6 +4,7 @@
   - COMBINING KAVYKA ABOVE RIGHT (`U+1DF6`).
   - COMBINING KAVYKA ABOVE LEFT (`U+1DF7`).
   - DOTTED OBELOS (`U+2E13`).
+  - DASH WITH LEFT UPTURN (`U+2E43`) ... DOTTED SOLIDUS (`U+2E4A`).
   - COMBINING CYRILLIC VZMET (`U+A66F`).
   - COMBINING CYRILLIC KAVYKA (`U+A67C`) ... CYRILLIC PAYEROK (`U+A67F`).
   - MODIFIER LETTER DOT VERTICAL BAR (`U+A717`) ... MODIFIER LETTER DOT HORIZONTAL BAR (`U+A719`).
