--- a/changes/30.1.3.md
+++ b/changes/30.1.3.md
@@ -1,2 +1,3 @@
 * Improve glyph shape of INVERTED LOW KAVYKA WITH KAVYKA ABOVE (`U+2E46`).
 * Fix IPPH/APPH localization for superscript/subscript Greek Lower Beta and Chi (`U+1D5D`, `U+1D61`, `U+1D66`, `U+1D6A`).
+* Fix metrics of Cyrillie EnGhe and Abkhasian Che under Aile/Etoile (#2366).
