--- a/changes/30.1.3.md
+++ b/changes/30.1.3.md
@@ -2,3 +2,11 @@
 * Fix IPPH/APPH localization for superscript/subscript Greek Lower Beta and Chi (`U+1D5D`, `U+1D61`, `U+1D66`, `U+1D6A`).
 * Fix metrics of Cyrillie EnGhe and Abkhasian Che under Aile/Etoile (#2366).
 * Fix CV/SS application of localized form of superscript/subscript letters (#2368).
+* Improve glyph visual for `U+279D`, `U+27A2`, `U+27A3`, and `U+2B4D`.
+* Add characters:
+  - STAR OF DAVID (`U+2720`).
+  - HEAVY TRIANGLE-HEADED RIGHTWARDS ARROW (`U+279E`).
+  - LEFTWARDS HARPOON WITH BARB UP ABOVE LEFTWARDS HARPOON WITH BARB DOWN (`U+2962`) ... DOWNWARDS HARPOON WITH BARB LEFT BESIDE DOWNWARDS HARPOON WITH BARB RIGHT (`U+2965`).
+  - UPWARDS HARPOON WITH BARB LEFT BESIDE DOWNWARDS HARPOON WITH BARB RIGHT (`U+296E`).
+  - DOWNWARDS HARPOON WITH BARB LEFT BESIDE UPWARDS HARPOON WITH BARB RIGHT (`U+296F`).
+  - HELLSCHREIBER PAUSE SYMBOL (`U+2BFF`).
