Make `cv56` apply to `U+A662`..`U+A667`.

--- a/changes/30.1.3.md
+++ b/changes/30.1.3.md
@@ -1,7 +1,8 @@
 * Improve glyph shape of INVERTED LOW KAVYKA WITH KAVYKA ABOVE (`U+2E46`).
-* Fix IPPH/APPH localization for superscript/subscript Greek Lower Beta and Chi (`U+1D5D`, `U+1D61`, `U+1D66`, `U+1D6A`).
 * Fix metrics of Cyrillie EnGhe and Abkhasian Che under Aile/Etoile (#2366).
+* Make CYRILLIC CAPITAL LETTER SOFT DE (`U+A662`) ... CYRILLIC SMALL LETTER SOFT EM (`A667`) follow variants of Greek Capital Gamma (`cv56`).
 * Fix CV/SS application of localized form of superscript/subscript letters (#2368).
+* Fix IPPH/APPH localization for superscript/subscript Greek Lower Beta and Chi (`U+1D5D`, `U+1D61`, `U+1D66`, `U+1D6A`).
 * Improve glyph visual for `U+279D`, `U+27A2`, `U+27A3`, and `U+2B4D`.
 * Add characters:
   - STAR OF DAVID (`U+2720`).
