Fix `cv96` application to `U+2E48`.

--- a/changes/30.1.3.md
+++ b/changes/30.1.3.md
@@ -1,4 +1,5 @@
 * Improve glyph shape of INVERTED LOW KAVYKA WITH KAVYKA ABOVE (`U+2E46`).
+* Fix `cv96` application to LOW KAVYKA WITH DOT (`U+2E48`).
 * Fix metrics of Cyrillie EnGhe and Abkhasian Che under Aile/Etoile (#2366).
 * Make CYRILLIC CAPITAL LETTER SOFT DE (`U+A662`) ... CYRILLIC SMALL LETTER SOFT EM (`A667`) follow variants of Greek Capital Gamma (`cv56`).
 * Fix CV/SS application of localized form of superscript/subscript letters (#2368).
