--- a/changes/30.1.3.md
+++ b/changes/30.1.3.md
@@ -4,6 +4,7 @@
 * Fix metrics of Cyrillie EnGhe and Abkhasian Che under Aile/Etoile (#2366).
 * Make CYRILLIC CAPITAL LETTER SOFT DE (`U+A662`) ... CYRILLIC SMALL LETTER SOFT EM (`A667`) follow variants of Greek Capital Gamma (`cv56`).
 * Make Bulgarian Cyrillic Lower El follow variants of Greek Capital Lambda (`cv60`).
+* Allow Italic Serbian Cyrillic Lower Ghe to use Hooky Bottom and Z-Shaped variants of `i` (`cv34`).
 * Fix CV/SS application of localized form of superscript/subscript letters (#2368).
 * Fix IPPH/APPH localization for superscript/subscript Greek Lower Beta and Chi (`U+1D5D`, `U+1D61`, `U+1D66`, `U+1D6A`).
 * Improve glyph visual for `U+279D`, `U+27A2`, `U+27A3`, and `U+2B4D`.
