* Add bottom-serifed variants to Cyrillic Ze.

--- a/changes/30.3.0.md
+++ b/changes/30.3.0.md
@@ -1,1 +1,2 @@
 * Add separate variant selectors For Cyrillic Capital/Lower E (`VXAA`, `VXAB`).
+* Add `unilateral-bottom-serifed` and `unilateral-bottom-inward-serifed` variants for Cyrillic Capital/Lower Ze (`cv69`, `cv70`).
