Add `serifed-capped` variants for `E`/`F` (#2026).

--- a/changes/30.3.0.md
+++ b/changes/30.3.0.md
@@ -1,4 +1,5 @@
 * Add separate variant selectors For Cyrillic Capital/Lower E (`VXAA`, `VXAB`).
+* Add `serifed-capped` variants for `capital-e` and `capital-f` (`cv05`, `cv06`) (#2026).
 * Add `unilateral-bottom-serifed` and `unilateral-bottom-inward-serifed` variants for Cyrillic Capital/Lower Ze (`cv69`, `cv70`).
 * Add characters:
   - SYMBOL FOR SAMARITAN SOURCE (`U+214F`).
