--- a/changes/30.3.0.md
+++ b/changes/30.3.0.md
@@ -1,4 +1,6 @@
 * Add separate variant selectors For Cyrillic Capital/Lower E (`VXAA`, `VXAB`).
+* Add variant selector for Capital Eszet (`ẞ`) (`VXAC`) (#1552).
+* Add variant selector for Capital Thorn (`Þ`) (`VXAD`).
 * Add `serifed-capped` variants for `capital-e` and `capital-f` (`cv05`, `cv06`) (#2026).
 * Add `unilateral-bottom-serifed` and `unilateral-bottom-inward-serifed` variants for Cyrillic Capital/Lower Ze (`cv69`, `cv70`).
 * Add characters:
