--- a/changes/30.3.1.md
+++ b/changes/30.3.1.md
@@ -1,2 +1,4 @@
 * Add Capital Eszet (`VXAC`) variants with top-left corner.
 * Add square-dotted variant for brailles (#2388).
+* Fix leaning mark anchors for `U+0195`, `U+019E`, `U+01A6`, and `U+0220`.
+* Optimize glyph shape for `U+01A6`.
