--- a/changes/30.3.1.md
+++ b/changes/30.3.1.md
@@ -2,3 +2,4 @@
 * Add square-dotted variant for brailles (#2388).
 * Fix leaning mark anchors for `U+0195`, `U+019E`, `U+01A6`, and `U+0220`.
 * Optimize glyph shape for `U+01A6`.
+* Make Aile and Etoile use {`six`|`nine`}.`closed-contour` by default.
