Fix side bearings of latin1macron under QP.

--- a/changes/30.3.1.md
+++ b/changes/30.3.1.md
@@ -5,3 +5,4 @@
 * Make Aile and Etoile use {`six`|`nine`}.`closed-contour` by default.
 * Make `ss20` use `seven`.`curly-serifless` by default.
 * Adjust balancing of r with corner hooks (#2394).
+* Fix side bearings of Latin-1 Macron (`U+00AF`) under Quasi-Proportional.
