Make tjeKomi/teMidHook slightly wider under QP.

--- a/changes/30.3.1.md
+++ b/changes/30.3.1.md
@@ -6,4 +6,4 @@
 * Make `ss20` use `seven`.`curly-serifless` by default.
 * Adjust balancing of r with corner hooks (#2394).
 * Fix side bearings of Latin-1 Macron (`U+00AF`) under Quasi-Proportional.
-* Make LATIN SMALL LIGATURE {FFI|FFL} (`U+FB03`..`U+FB04`) slightly wider under Quasi-Proportional.
+* Make `U+050F`, `U+A68B`, `U+FB03`, and `U+FB04` slightly wider under Quasi-Proportional.
