--- a/changes/30.3.3.md
+++ b/changes/30.3.3.md
@@ -1,4 +1,4 @@
-Make TELEPHONE SIGN (`U+2121`) and FACSIMILE SIGN (`U+213B`) use small-capital forms instead of superscript.
+* Make TELEPHONE SIGN (`U+2121`) and FACSIMILE SIGN (`U+213B`) use small-capital forms instead of superscript.
 * Add Characters:
   - FRACTION NUMERATOR ONE (`U+215F`) (#1539).
   - BIG SOLIDUS (`U+29F8`) (#2414).
