--- a/changes/31.0.1.md
+++ b/changes/31.0.1.md
@@ -1,7 +1,7 @@
 * Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
 * Add characters:
-  - BLACK-LETTER CAPITAL H (`U+210C`).
-  - BLACK-LETTER CAPITAL I (`U+2111`).
-  - BLACK-LETTER CAPITAL R (`U+211C`).
-  - BLACK-LETTER CAPITAL Z (`U+2128`).
-  - BLACK-LETTER CAPITAL C (`U+212D`).
+  - BLACK-LETTER CAPITAL H (`U+210C`) (#714).
+  - BLACK-LETTER CAPITAL I (`U+2111`) (#714).
+  - BLACK-LETTER CAPITAL R (`U+211C`) (#714).
+  - BLACK-LETTER CAPITAL Z (`U+2128`) (#714).
+  - BLACK-LETTER CAPITAL C (`U+212D`) (#714).
