--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -1,4 +1,5 @@
 * Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
+* Optimize glyph for VERTICAL LINE WITH MIDDLE DOT (`U+2327`).
 * Add characters:
   - BLACK-LETTER CAPITAL H (`U+210C`) (#714).
   - BLACK-LETTER CAPITAL I (`U+2111`) (#714).
