--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -1,5 +1,6 @@
 * Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
 * Optimize glyph for VERTICAL LINE WITH MIDDLE DOT (`U+2327`).
+* Improve `k` (`cv46`) and `x` (`cv58`) variants used by `ss03`, `ss08`, `ss09`, `ss10`, `ss12`, `ss14`, and `ss18` under slab italic.
 * Add characters:
   - BLACK-LETTER CAPITAL H (`U+210C`) (#714).
   - BLACK-LETTER CAPITAL I (`U+2111`) (#714).
