--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -7,6 +7,12 @@
   - LATIN SMALL LETTER BLACKLETTER E (`U+AB32`) (#2443).
   - LATIN SMALL LETTER BLACKLETTER O (`U+AB3D`) (#2443).
   - LATIN SMALL LETTER BLACKLETTER O WITH STROKE (`U+AB3E`) (#2443).
+  - LEFT-POINTING ROCKET SHIP (`U+1CC56`) ... DOWN-POINTING ROCKET SHIP (`U+1CC59`) (Proposed for Unicode 16; L2/21-235).
+  - LEFT-POINTING ATOMIC BOMB (`U+1CC60`) ... DOWN-POINTING ATOMIC BOMB (`U+1CC63`) (Proposed for Unicode 16; L2/21-235).
+  - LEFT-POINTING RIFLE (`U+1CC65`) ... DOWN-POINTING RIFLE (`U+1CC68`) (Proposed for Unicode 16; L2/21-235).
+  - MOON LANDER (`U+1CDF5`) (Proposed for Unicode 16; L2/21-235).
+  - UP-POINTING FROG (`U+1CDFB`) (Proposed for Unicode 16; L2/21-235).
+  - DOWN-POINTING FROG (`U+1CDFC`) (Proposed for Unicode 16; L2/21-235).
   - MATHEMATICAL FRAKTUR CAPITAL A (`U+1D504`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL B (`U+1D505`) (#444).
   - MATHEMATICAL FRAKTUR CAPITAL E (`U+1D508`) (#444).
