--- a/changes/31.1.0.md
+++ b/changes/31.1.0.md
@@ -13,19 +13,8 @@
   - MOON LANDER (`U+1CDF5`) (Proposed for Unicode 16; L2/21-235).
   - UP-POINTING FROG (`U+1CDFB`) (Proposed for Unicode 16; L2/21-235).
   - DOWN-POINTING FROG (`U+1CDFC`) (Proposed for Unicode 16; L2/21-235).
-  - MATHEMATICAL FRAKTUR CAPITAL A (`U+1D504`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL B (`U+1D505`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL E (`U+1D508`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL G (`U+1D50A`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL J (`U+1D50D`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL K (`U+1D50E`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL M (`U+1D510`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL N (`U+1D511`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL P (`U+1D513`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL V (`U+1D519`) (#444).
-  - MATHEMATICAL FRAKTUR CAPITAL W (`U+1D51A`) (#444).
-  - MATHEMATICAL FRAKTUR SMALL E (`U+1D522`) (#444).
-  - MATHEMATICAL FRAKTUR SMALL O (`U+1D52C`) (#444).
+  - MATHEMATICAL FRAKTUR CAPITAL A (`U+1D504`) .. MATHEMATICAL FRAKTUR SMALL Z (`U+1D537`) (#444).
+  - MATHEMATICAL BOLD FRAKTUR CAPITAL A (`U+1D56C`) .. MATHEMATICAL BOLD FRAKTUR SMALL Z (`U+1D59F`) (#444).
 * Add separate variant selectors for Cyrillic Capital En/Er (`VXAA`, `VXAB`).
 * Add variant selectors for Greek lower Beta/Gamma/Nu/Upsilon (`VXAC`, `VXAD`, `VXAE`, `VXAF`).
 * Optimize glyph for VERTICAL LINE WITH MIDDLE DOT (`U+2327`).
