Add `rounded-vertical-sides` variants for `W`/`w`.

--- a/changes/31.3.0.md
+++ b/changes/31.3.0.md
@@ -1,2 +1,3 @@
 * Add `diagonal-tailed-cursive` variants for Cyrillic Lower Ef (`cv93`).
+* Add `rounded-vertical-sides` variants for Capital/Lower W (`cv32`, `cv57`).
 * Prevent clipping of texture-extended glyphs in Kitty.
