--- a/changes/31.7.0.md
+++ b/changes/31.7.0.md
@@ -1,9 +1,8 @@
 * Fix Macedonian Cyrillic Gje under italics (#2493).
 * Improve widths of overline marks of Serbian italic lower Ghe/Pe/Te.
 * Add Characters:
-  - COUNTING ROD UNIT DIGIT ONE (`U+1D360`) ... TALLY MARK FIVE (`U+1D378`).
+  - COUNTING ROD UNIT DIGIT ONE (`U+1D360`) ... COUNTING ROD TENS DIGIT NINE (`U+1D371`).
   - COMPOSITION SYMBOL (`U+2384`).
-  - HEAVY CIRCLE (`U+2B58`).
   - HEAVY CIRCLED SALTIRE (`U+2B59`).
   - DRIVE SLOW SIGN (`U+26DA`).
   - WHITE DIAMOND IN SQUARE (`U+26CB`).
