--- a/changes/31.7.0.md
+++ b/changes/31.7.0.md
@@ -1,5 +1,7 @@
 * Fix Macedonian Cyrillic Gje under italics (#2493).
 * Improve widths of overline marks of Serbian italic lower Ghe/Pe/Te.
+* Remove crossbar variants for `Z`/`z` when under Polish locale (`PLK`).
+* Make serif variants for Latin Capital/Small Schwa (`Ə`/`ə`) only appear under Turkic (Turkish/Azerbaijani/etc.) locales (`TRK`, `AZE`, `GAG`, `KAZ`, `TAT`, `CRT`).
 * Add Characters:
   - COUNTING ROD UNIT DIGIT ONE (`U+1D360`) ... COUNTING ROD TENS DIGIT NINE (`U+1D371`).
   - COMPOSITION SYMBOL (`U+2384`).
