Improve serifs of `NRev`, optimize sw of `Eng`.

--- a/changes/31.7.0.md
+++ b/changes/31.7.0.md
@@ -4,6 +4,7 @@
 * Make serif variants for Latin Capital/Small Schwa (`Ə`/`ə`) only appear under Turkic (Turkish/Azerbaijani/etc.) locales (`TRK`, `AZE`, `GAG`, `KAZ`, `TAT`, `CRT`) as other languages that use Latin Schwa (including the IPA) unify its metrics with Open O (`Ɔ`/`ɔ`) or a literal Turned E (`Ǝ`/`ǝ`).
 * Make serifs of Latin Letter Small Capital I (`ɪ`) slightly wider under Quasi-Proportional.
 * Make Cyrillic Small Letter Komi Dje (`ԃ`) slightly wider under Quasi-Proportional.
+* Make serifs of Small Capital and Modifier Letter Reversed N (`ᴎ`/`ᴻ`) more accurately follow the serifs of `N`.
 * Make Latin Capital Letter Small Capital I (`Ɪ`) slightly wider under Etoile.
 * Add Characters:
   - CYRILLIC CAPITAL LETTER TJE (`U+1C89`) ... CYRILLIC SMALL LETTER TJE (`U+1C8A`).
