Make `currency/somSign` follow `C`.

--- a/changes/31.7.0.md
+++ b/changes/31.7.0.md
@@ -5,6 +5,7 @@
 * Make serifs of Latin Letter Small Capital I (`ɪ`) slightly wider under Quasi-Proportional.
 * Make Cyrillic Small Letter Komi Dje (`ԃ`) slightly wider under Quasi-Proportional.
 * Make serifs of Small Capital and Modifier Letter Reversed N (`ᴎ`/`ᴻ`) more accurately follow the serifs of `N`.
+* Make Som Sign (`⃀`) follow variants of capital `C`.
 * Make Latin Capital Letter Small Capital I (`Ɪ`) slightly wider under Etoile.
 * Add Characters:
   - CYRILLIC CAPITAL LETTER TJE (`U+1C89`) ... CYRILLIC SMALL LETTER TJE (`U+1C8A`).
