Optimize glyph for Tonos Above (`U+0384`).

--- a/changes/31.8.0.md
+++ b/changes/31.8.0.md
@@ -3,3 +3,4 @@
   - MUSICAL SYMBOL RINFORZANDO (`U+1D18C`) ... MUSICAL SYMBOL FORTE (`U+1D191`) (#2522).
 * Improve glyph for Cyrillic I (`И`/`и`) under slab (#2489).
   - Bulgarian locale (`'BGR'`) uses original style for capital.
+* Optimize glyph for Tonos Above (`U+0384`) in accented Greek letters.
