Fix seam in Cyrillic Capital/Lower Zhwe.

--- a/changes/31.8.0.md
+++ b/changes/31.8.0.md
@@ -6,3 +6,4 @@
 * Optimize glyph for Tonos Above (`U+0384`) in accented Greek letters.
 * Optimize stroke width of bar for split bowl variants of Cyrillic Lower Ef (`ф`).
 * Optimize glyph for Cyrillic Capital Ef (`Ф`) under Bulgarian locale (`'BGR '`) under slab.
+* Fix seam in glyphs of Cyrillic Capital/Small Letter Zhwe (`U+A684`..`U+A685`).
