--- a/changes/31.8.0.md
+++ b/changes/31.8.0.md
@@ -7,3 +7,5 @@
 * Optimize stroke width of bar for split bowl variants of Cyrillic Lower Ef (`ф`).
 * Optimize glyph for Cyrillic Capital Ef (`Ф`) under Bulgarian locale (`'BGR '`) under slab.
 * Fix seam in glyphs of Cyrillic Capital/Small Letter Zhwe (`U+A684`..`U+A685`).
+* Fix broken shape of certain power and playback symbols under quasi-proportional (#2528).
+* Fix alignment of the suit part of Playing Cards glyphs under quasi-Proportional (#2529).
