--- a/changes/31.8.1.md
+++ b/changes/31.8.1.md
@@ -4,3 +4,4 @@
 * Optimize glyphs for Volapük Ae/Oe/Ue (`U+A79A`..`U+A79F`).
 * Optimize glyph for Cyrillic Lower Dzze (`U+A689`) under italics.
 * Allowed customizing menu WWS value to name map (#2488).
+* Add IJ-acute ligatures (#2483).
