Optimize glyph of `OE`/`smcpOE`.

--- a/changes/31.9.0.md
+++ b/changes/31.9.0.md
@@ -1,6 +1,7 @@
 * Add IJ-acute ligatures (#2483).
 * Allowed customizing menu WWS value to name map (#2488).
 * Optimize glyphs for `rounded-serifless` and `rounded-serifed` variants for Capital Eszett (`ẞ`).
+* Optimize glyph for Capital OE (`U+0152`) under Quasi-Proportional.
 * Optimize glyphs for closed epsilon shapes (`U+025E`, `U+029A`).
 * Optimize glyphs for cursive variants for Greek Lower Beta (`β`) and Cyrillic Lower Ve (`в`).
 * Optimize glyphs for Cyrillic Capital/Lower Broad On (`U+047A`, `U+047B`).
