--- a/changes/31.9.0.md
+++ b/changes/31.9.0.md
@@ -9,6 +9,7 @@
 * Optimize glyph for Cyrillic Lower Dzze (`U+A689`) under italics.
 * Optimize glyphs for Volapük Ae/Oe/Ue (`U+A79A`..`U+A79F`).
 * Optimize glyph for Latin Lower Dezh Digraph with Palatal Hook (`U+1DF12`).
+* Fix misalignments of square brackets under certain size caused by rounding errors (#2545).
 * Add characters:
   - WAVY LINE (`U+2307`).
   - SYMMETRY (`U+232F`).
