Optimize serifed semi-chancery variants for `x`.

--- a/changes/31.9.2.md
+++ b/changes/31.9.2.md
@@ -4,3 +4,4 @@
   - LONG RIGHT TACK (`U+27DD`).
   - LONG LEFT TACK (`U+27DE`).
   - UP ARROW THROUGH CIRCLE (`U+29BD`).
+* Optimize `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for `x` (`cv58`).
