--- a/changes/31.9.2.md
+++ b/changes/31.9.2.md
@@ -1,4 +1,7 @@
 * Add characters:
+  - ARMENIAN CAPITAL LETTER AYB (`U+0531`) ... ARMENIAN CAPITAL LETTER AYB (`U+0556`).
+  - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN HYPHEN (`U+058A`).
+  - ARMENIAN DRAM SIGN (`U+058F`).
   - LEFT AND RIGHT DOUBLE TURNSTILE (`U+27DA`).
   - LEFT AND RIGHT TACK (`U+27DB`).
   - LONG RIGHT TACK (`U+27DD`).
