--- a/changes/32.0.0.md
+++ b/changes/32.0.0.md
@@ -1,10 +1,11 @@
 * Add characters:
-  - ARMENIAN CAPITAL LETTER AYB (`U+0531`) ... ARMENIAN CAPITAL LETTER AYB (`U+0556`).
-  - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN HYPHEN (`U+058A`).
-  - ARMENIAN DRAM SIGN (`U+058F`).
   - LEFT AND RIGHT DOUBLE TURNSTILE (`U+27DA`).
   - LEFT AND RIGHT TACK (`U+27DB`).
   - LONG RIGHT TACK (`U+27DD`).
   - LONG LEFT TACK (`U+27DE`).
   - UP ARROW THROUGH CIRCLE (`U+29BD`).
+* Add Armenian letters:
+  - ARMENIAN CAPITAL LETTER AYB (`U+0531`) ... ARMENIAN CAPITAL LETTER AYB (`U+0556`).
+  - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN HYPHEN (`U+058A`).
+  - ARMENIAN DRAM SIGN (`U+058F`).
 * Optimize `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for `x` (`cv58`).
