Make Dotless J with Stroke and Hook auto-serifed.

--- a/changes/32.0.0.md
+++ b/changes/32.0.0.md
@@ -9,3 +9,4 @@
   - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN HYPHEN (`U+058A`).
   - ARMENIAN DRAM SIGN (`U+058F`).
 * Optimize `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for `x` (`cv58`).
+* Make Dotless J with Stroke and Hook (`U+0284`) have a serif under slab.
