--- a/changes/32.0.0.md
+++ b/changes/32.0.0.md
@@ -1,3 +1,5 @@
+* Add Armenian letters:
+  - ARMENIAN CAPITAL LETTER AYB (`U+0531`) ... ARMENIAN DRAM SIGN (`U+058F`).
 * Add characters:
   - LEFT AND RIGHT DOUBLE TURNSTILE (`U+27DA`).
   - LEFT AND RIGHT TACK (`U+27DB`).
@@ -6,10 +8,5 @@
   - UP ARROW THROUGH CIRCLE (`U+29BD`).
   - UPPER LEFT QUADRANT STANDING KNIGHT (`U+1CCD2`) ... LOWER RIGHT QUADRANT STANDING KNIGHT (`U+1CCD5`).
   - HORIZONTAL ZIGZAG LINE (`U+1CEB0`).
-* Add Armenian letters:
-  - ARMENIAN CAPITAL LETTER AYB (`U+0531`) ... ARMENIAN CAPITAL LETTER FEH (`U+0556`).
-  - ARMENIAN MODIFIER LETTER LEFT HALF RING (`U+0559`) ... ARMENIAN APOSTROPHE (`U+055A`).
-  - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN HYPHEN (`U+058A`).
-  - RIGHT-FACING ARMENIAN ETERNITY SIGN (`U+058D`) ... ARMENIAN DRAM SIGN (`U+058F`).
 * Optimize `semi-chancery-straight-serifed` and `semi-chancery-curly-serifed` variants for `x` (`cv58`).
 * Make Dotless J with Stroke and Hook (`U+0284`) have a serif under slab.
