--- a/changes/32.1.0.md
+++ b/changes/32.1.0.md
@@ -1,3 +1,4 @@
+* Make dense letters less outstanding (#2581).
 * Optimize glyphs for Armenian Capital Ini (`U+053B`), Ken (`U+053F`), and Vew (`U+054E`).
 * Remove bottom-right serif from Armenian Capital Now (`U+0546`).
 * Remove top-right serif from Armenian Lower Ben (`U+0562`).
