--- a/changes/32.2.0.md
+++ b/changes/32.2.0.md
@@ -7,8 +7,11 @@
   - LATIN LETTER SMALL CAPITAL M (`U+1D0D`).
   - LATIN LETTER SMALL CAPITAL W (`U+1D21`).
   - GREEK LETTER SMALL CAPITAL PSI (`U+1D2A`).
+  - TELEPHONE SIGN (`U+2121`).
+  - FACSIMILE SIGN (`U+213B`).
   - CYRILLIC SMALL LETTER SOFT EM (`U+A667`).
   - LATIN LETTER SMALL CAPITAL TURNED M (`U+A7FA`).
   - MODIFIER LETTER SMALL CAPITAL AA (`U+10780`).
   - MODIFIER LETTER SMALL CAPITAL OE (`U+107A3`).
   - MODIFIER LETTER CYRILLIC SMALL EM (`U+1E03B`).
+* Make LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`) slightly narrower under Quasi-Proportional.
