Cleanup and optimization of Bulgarian Cyrillic Ef.

--- a/changes/32.2.0.md
+++ b/changes/32.2.0.md
@@ -15,3 +15,4 @@
   - MODIFIER LETTER SMALL CAPITAL OE (`U+107A3`).
   - MODIFIER LETTER CYRILLIC SMALL EM (`U+1E03B`).
 * Make LATIN SMALL LIGATURE FF (`U+FB00`) ... LATIN SMALL LIGATURE FFL (`U+FB04`) slightly narrower under Quasi-Proportional.
+* Optimize glyphs for Bulgarian Cyrillic Capital/Small Letter Ef (`U+0424`, `U+0444`).
